--- a/Config/Draco/TEST/JOINT_TEST.yaml
+++ b/Config/Draco/TEST/JOINT_TEST.yaml
@@ -1,10 +1,19 @@
-#initial_jpos: [0., -0.08, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
-initial_jpos: [0., -0.1, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
-#initial_jpos: [0., 0., -0.8, 1.6, 0.81, 0., 0., -1.1, 1.3, 0.81] # Swing Test
-initialization_time: 3.0
+test_configuration:
+    initial_jpos: [0., -0.1, -0.8, 1.6, 0.81, 0., 0.08, -0.8, 1.6, 0.81]
+    initialization_time: 3.0
 
-test_duration: 1000.32
+    test_duration: 1000.32
 
-amplitude : [ 0 , 0 , 0 , 0 , 0.  , 0 , 0 , 0  , 0.  , 0. ]
-frequency : [ 0 , 0 , 0 , 0 , 1.8 , 0 , 0 , 0. , 1.5 , 1.8 ]
-phase     : [ 0 , 0 , 0 , 0 , 0   , 0 , 0 , 0  , 0  , 0 ]
+    amplitude : [ 0 , 0 , 0 , 0 , 0.  , 0 , 0 , 0  , 0.  , 0. ]
+    frequency : [ 0 , 0 , 0 , 0 , 1.8 , 0 , 0 , 0. , 1.5 , 1.8 ]
+    phase     : [ 0 , 0 , 0 , 0 , 0   , 0 , 0 , 0  , 0  , 0 ]
+
+control_configuration:
+
+    joint_position_ctrl:
+        kp: [100 , 100 , 100 , 100 , 50. , 100 , 100 , 100 , 100 , 50. ]
+        kd: [3   , 3   , 3   , 3   , 1.   , 3   , 3   , 3   , 3   , 1.  ]
+
+    joint_swing_ctrl:
+        kp: [100 , 100 , 100 , 100 , 50. , 100 , 100 , 100 , 100 , 50. ]
+        kd: [3   , 3   , 3   , 3   , 1.  , 3   , 3   , 3   , 3   , 1.  ]
