--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,15 +1,13 @@
 is_record: false
-display_joint_frame: false
 num_steps_per_cycle: 30
-
 hanging_height: 0.83
+display_joint_frame: false
 
+print_computation_time: false
 release_time: 4.
 #release_time: 7000.9
-
 check_collision: true
 #check_collision: false
-
 pulling_back_time: 2.0
 pulling_back_distance: 0.088
 
