--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -5,14 +5,11 @@ display_joint_frame: false
 initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
 
 print_computation_time: false
-release_time: 4.
-#release_time: 7000.9
+release_time: 3.95
 check_collision: true
-#check_collision: false
 pulling_back_time: 2.0
 pulling_back_distance: 0.088
 
-
 control_configuration:
-  kp: [200 , 100 , 100 , 100 , 0   , 200 , 100 , 100 , 100 , 0]
-  kd: [20  , 7   , 7   , 7   , 0 , 20  , 7   , 7   , 7   , 0]
+  kp: [100 , 100 , 100 , 100 , 10 , 100 , 100 , 100 , 100 , 10]
+  kd: [20  , 20  , 20  , 20  , 1  , 20  , 20  , 20  , 20  , 1]
