mymio deleted & cmake update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.5.1)
 project(PnC)
 
-## ===========
+##=============================================================================
 ## CMake Flags
-## ===========
+##=============================================================================
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build, options are: Debug | Release | RelWithDebInfo | MinSizeRel" FORCE)
 endif()
@@ -13,16 +13,16 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
-## ===========
+##=============================================================================
 ## Build Setup
-## ===========
+##=============================================================================
 set(INSTALL_LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib )
 set(INSTALL_BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin )
 set(INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME})
 
-## ==========
+##=============================================================================
 ## Dependancy
-## ==========
+##=============================================================================
 
 # System
 include_directories("/usr/local/include")
@@ -31,6 +31,18 @@ link_directories("/usr/local/lib")
 # Dart
 find_package(DART 6.8 REQUIRED COMPONENTS utils-urdf gui-osg CONFIG)
 include_directories(${DART_INCLUDE_DIRS})
+
+# Zmq
+find_package(ZMQ)
+if(ZMQ_FOUND)
+    include_directories(${ZMQ_INCLUDE_DIRS})
+endif()
+
+# Protobuf
+find_package(Protobuf)
+if(Protobuf_FOUND)
+    include_directories(${Protobuf_INCLUDE_DIRS})
+endif()
 
 # Pybind11
 set(USE_PYBIND11 False)
@@ -65,15 +77,15 @@ if(GTEST_FOUND)
     enable_testing()
 endif()
 
-## =================
+##=============================================================================
 ## Include Directory
-## =================
+##=============================================================================
 include_directories("${PROJECT_SOURCE_DIR}")
 include_directories("${PROJECT_SOURCE_DIR}/Simulator")
 
-## ================
+##=============================================================================
 ## Add Subdirectory
-## ================
+##=============================================================================
 add_subdirectory(Simulator)
 add_subdirectory(RobotSystem)
 add_subdirectory(Utils)
@@ -85,9 +97,9 @@ if(USE_PYBIND11)
   add_subdirectory(Bindings)
 endif()
 
-## ==================
+##=============================================================================
 ## Configuration File
-## ==================
+##=============================================================================
 SET (THIS_COM "${PROJECT_SOURCE_DIR}/" )
 CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/config.h.cmake ${PROJECT_SOURCE_DIR}/Configuration.h)
 install(FILES ${PROJECT_SOURCE_DIR}/Configuration.h DESTINATION "${INSTALL_INCLUDE_DIR}")
