--- a/PnC/CartPolePnC/CMakeLists.txt
+++ b/PnC/CartPolePnC/CMakeLists.txt
@@ -4,4 +4,7 @@ file(GLOB_RECURSE headers "*.hpp")
 add_library(CartPolePnC SHARED ${sources})
 target_link_libraries(CartPolePnC ${DART_LIBRARIES}
                                   myRobotSystem
-                                  myUtils)
+                                  myUtils
+                                  RLProtobuf
+                                  ${Protobuf_LIBRARIES}
+                                  ${ZMQ_LIBRARIES})
