--- a/Utils/CMakeLists.txt
+++ b/Utils/CMakeLists.txt
@@ -2,7 +2,6 @@ FILE(GLOB_RECURSE sources "*.cpp")
 FILE(GLOB general_headers "General/*.hpp")
 FILE(GLOB io_headers "*.hpp")
 FILE(GLOB math_headers "*.hpp" "*.h")
-FILE(GLOB rl_headers "*.hpp")
 
 if(NOT ZMQ_FOUND)
     list(REMOVE_ITEM sources ${CMAKE_CURRENT_SOURCE_DIR}/IO/ZmqUtilities.cpp)
@@ -21,8 +20,7 @@ if(CMAKE_THREAD_LIBS_INIT)
 endif()
 
 install(TARGETS myUtils DESTINATION "${INSTALL_LIB_DIR}")
-install(FILES ${general_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/General")
-install(FILES ${general_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/General")
-install(FILES ${io_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/IO")
-install(FILES ${math_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Math")
-install(FILES ${rl_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/ReinforcementLearning")
+install(FILES ${general_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils/General")
+install(FILES ${general_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils/General")
+install(FILES ${io_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils/IO")
+install(FILES ${math_headers} DESTINATION "${INSTALL_INCLUDE_DIR}/Utils/Math")
