data generating part

--- a/Messages/CMakeLists.txt
+++ b/Messages/CMakeLists.txt
@@ -1,6 +1,6 @@
-PROTOBUF_GENERATE_CPP(PROTO_DATA_SET_SRC PROTO_DATA_SET_HEADER rl_msg.proto)
+PROTOBUF_GENERATE_CPP(PROTO_DATA_SET_SRC PROTO_DATA_SET_HEADER cart_pole_msg.proto)
 ADD_LIBRARY(RLProtobuf ${PROTO_DATA_SET_HEADER} ${PROTO_DATA_SET_SRC})
 target_include_directories(RLProtobuf PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
 
-PROTOBUF_GENERATE_PYTHON(PROTO_DATA_SET_PY rl_msg.proto)
+PROTOBUF_GENERATE_PYTHON(PROTO_DATA_SET_PY cart_pole_msg.proto)
 add_custom_target(myTarget ALL DEPENDS ${PROTO_DATA_SET_PY})
