--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,9 @@ add_subdirectory(Utils)
 add_subdirectory(ExternalSource)
 add_subdirectory(PnC)
 add_subdirectory(Filters)
-add_subdirectory(Messages)
+if(Protobuf_FOUND)
+    add_subdirectory(Messages)
+endif()
 
 if(USE_PYBIND11)
   add_subdirectory(Bindings)
@@ -107,5 +109,10 @@ endif()
 ## Configuration File
 ##=============================================================================
 SET (THIS_COM "${PROJECT_SOURCE_DIR}/" )
+if (Protobuf_FOUND AND Protobuf_FOUND)
+    SET (HAS_RL_DEP TRUE)
+else()
+    SET (HAS_RL_DEP FALSE)
+endif()
 CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/config.h.cmake ${PROJECT_SOURCE_DIR}/Configuration.h)
 install(FILES ${PROJECT_SOURCE_DIR}/Configuration.h DESTINATION "${INSTALL_INCLUDE_DIR}")
