--- a/PnC/CartPolePnC/CMakeLists.txt
+++ b/PnC/CartPolePnC/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB cartpole_pnc_headers "*.hpp")
 file(GLOB cartpole_testset_headers "TestSet/*.hpp")
 file(GLOB cartpole_ctrlset_headers "TestSet/*.hpp")
 
-if( NOT HAS_RL_DEP )
+if( NOT (ZMQ_FOUND AND Protobuf_FOUND) )
     list(REMOVE_ITEM sources ${CMAKE_CURRENT_SOURCE_DIR}/TestSet/RLTest.cpp
                              ${CMAKE_CURRENT_SOURCE_DIR}/CtrlSet/NeuralNetCtrl.cpp)
 endif()
@@ -14,7 +14,7 @@ target_link_libraries(CartPolePnC ${DART_LIBRARIES}
                                   myUtils
                                   myNN)
 
-if( HAS_RL_DEP )
+if( ZMQ_FOUND AND Protobuf_FOUND)
     target_link_libraries(CartPolePnC RLProtobuf
                                       ${Protobuf_LIBRARIES}
                                       ${ZMQ_LIBRARIES})
