go into learning process & before working on save and load & before optimizing learning parameters

--- a/Config/CartPole/TEST/RL_TEST.yaml
+++ b/Config/CartPole/TEST/RL_TEST.yaml
@@ -3,7 +3,7 @@ test_configuration:
 
 control_configuration:
     nn_ctrl:
-
+        timesteps_per_actorbatch: 256
         # ======================================================================
         # Observation
         # [cart position, pole position, cart velocity, pole velocity]
