--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,4 +1,5 @@
 is_record: false
+servo_rate: 0.001 # !!this should be match with controller servo rate!!
 num_steps_per_cycle: 30
 hanging_height: 0.83
 display_joint_frame: false
