--- a/Config/CartPole/SIMULATION.yaml
+++ b/Config/CartPole/SIMULATION.yaml
@@ -1,7 +1,9 @@
 is_record: false
 num_steps_per_cycle: 30
-servo_rate: 0.001
+servo_rate: 0.01
 display_joint_frame: false
 show_viewer: false
+init_state_lower_bound: [-0.05 , -0.1 , -0.01 , -0.02]
+init_state_upper_bound: [0.05  , 0.1  , 0.01  , 0.02]
 
 print_computation_time: false
