save model as .pkl & before checking save model, save as .txt, cpp test file with pretrained model, tensorboard

--- a/Config/CartPole/TEST/RL_TEST.yaml
+++ b/Config/CartPole/TEST/RL_TEST.yaml
@@ -29,5 +29,7 @@ control_configuration:
         # ======================================================================
         # Terminate condition
         # ======================================================================
-        terminate_obs_lower_bound: [-5 , -0.2, -10 , -5]
-        terminate_obs_upper_bound: [5  , 0.2, 10  , 5]
+        #terminate_obs_lower_bound: [-5 , -0.1, -10 , -5]
+        #terminate_obs_upper_bound: [5  , 0.1, 10  , 5]
+        terminate_obs_lower_bound: [-5 , -0.2 , -10 , -5]
+        terminate_obs_upper_bound: [5  , 0.2  , 10  , 5]
