--- a/Config/CartPole/SIMULATION.yaml
+++ b/Config/CartPole/SIMULATION.yaml
@@ -1,6 +1,6 @@
 is_record: false
 num_steps_per_cycle: 30
-servo_rate: 0.01
+servo_rate: 0.01 # !! This should be match with controller servo rate !!
 display_joint_frame: false
 show_viewer: false
 init_state_lower_bound: [-0.05 , -0.1 , -0.01 , -0.02]
