parallel env func added & baseline and gym are now submodules & cartpole script added

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "ExternalSource/pybind11"]
 	path = ExternalSource/pybind11
 	url = https://github.com/junhyeokahn/pybind11.git
+[submodule "ReinforcementLearning/baselines"]
+	path = ReinforcementLearning/baselines
+	url = https://github.com/junhyeokahn/baselines.git
+[submodule "ReinforcementLearning/gym"]
+	path = ReinforcementLearning/gym
+	url = https://github.com/junhyeokahn/gym.git
