--- a/Config/CartPole/TEST/RL_TEST.yaml
+++ b/Config/CartPole/TEST/RL_TEST.yaml
@@ -1,35 +1,45 @@
 test_configuration:
     duration: 1000000
+    # ==========================================================================
+    # Observation
+    # [cart position, pole position, cart velocity, pole velocity]
+    # ==========================================================================
+    obs_lower_bound  : [-50 , -1.785 , -20 , -15]
+    obs_upper_bound  : [50  , 1.785  , 20  , 15]
+
+    # ==========================================================================
+    # Action
+    # [cart force]
+    # ==========================================================================
+    action_lower_bound : -1
+    action_upper_bound : 1
+    action_scale : 50
+
+    # ======================================================================
+    # Terminate condition
+    # ======================================================================
+    #terminate_obs_lower_bound: [-5 , -0.1, -10 , -5]
+    #terminate_obs_upper_bound: [5  , 0.1, 10  , 5]
+    terminate_obs_lower_bound: [-15 , -0.2 , -10 , -5]
+    terminate_obs_upper_bound: [15  , 0.2  , 10  , 5]
 
 control_configuration:
-    nn_ctrl:
-        timesteps_per_actorbatch: 256
-        # ======================================================================
-        # Observation
-        # [cart position, pole position, cart velocity, pole velocity]
-        # ======================================================================
-        obs_lower_bound  : [-20 , -0.785 , -10 , -5]
-        obs_upper_bound  : [20  , 0.785  , 10  , 5]
 
-        # ======================================================================
-        # Action
-        # [cart force]
-        # ======================================================================
-        action_lower_bound : -50
-        action_upper_bound : 50
+    learning_ctrl:
+        protocol:
+            ip_control_pc: "localhost"
+            ip_sub_pub_prefix: "tcp://127.0.0.1:50"
+            ip_req_rep_prefix: "tcp://127.0.0.1:51"
+            username: 'junhyeokahn'
+            execute_cmd: "cd ~/Repository/PnC/build/bin && ./run_cart_pole"
+            exit_cmd: "pkill -f 'cart_pole"
 
-        # ======================================================================
-        # Cost
-        # ======================================================================
-        alive_bonus: 1
-        pole_cost: 1
-        cart_cost: 0.01
-        quad_input_cost: 0.01
+        cost:
+            alive_bonus: 1
+            pole_cost: 1
+            cart_cost: 0.01
+            quad_input_cost: 0.01
 
-        # ======================================================================
-        # Terminate condition
-        # ======================================================================
-        #terminate_obs_lower_bound: [-5 , -0.1, -10 , -5]
-        #terminate_obs_upper_bound: [5  , 0.1, 10  , 5]
-        terminate_obs_lower_bound: [-15 , -0.2 , -10 , -5]
-        terminate_obs_upper_bound: [15  , 0.2  , 10  , 5]
+
+    test_ctrl:
+        model_path: "dummy_for_now"
