--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,5 +1,7 @@
 is_record: false
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
+#show_viewer: false
+show_viewer: true
 num_steps_per_cycle: 30
 hanging_height: 0.83
 display_joint_frame: false
