--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,14 +1,14 @@
 is_record: false
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
-show_viewer: false
-#show_viewer: true
+#show_viewer: false
+show_viewer: true
 num_steps_per_cycle: 30
 hanging_height: 0.83
 display_joint_frame: false
 initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
 
 print_computation_time: false
-release_time: 4.15
+release_time: 3.95
 check_collision: true
 pulling_back_time: 2.0
 pulling_back_distance: 0.088
