--- a/Config/Draco/TEST/WALKING_SIM_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_SIM_TEST.yaml
@@ -19,8 +19,8 @@ test_configuration:
     #replanning: false
     transition_phase_mix_ratio: 0.2
     double_stance_mix_ratio: 0.0
-    contact_switch_check: true
-    #contact_switch_check: false
+    #contact_switch_check: true
+    contact_switch_check: false
 
 control_configuration:
 
@@ -86,7 +86,7 @@ planner_configuration:
 
     velocity_reversal_pln:
         x_step_length_limit: [-0.4, 0.4]
-        y_step_length_limit: [0.20, 0.65]
+        y_step_length_limit: [0.25, 0.65]
         com_velocity_limit: [0.0, 1.3]
         t_prime: [0.21 , 0.20]
-        kappa: [-0.08, -0.13]
+        kappa: [-0.09, -0.13]
