moving interactive frame for walking added & before finding parameters for walking

--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -14,3 +14,7 @@ jtrq_max: [200.  , 200.  , 200.  , 200.  , 20.  , 200.  , 200.  , 200.  , 200.  
 jtrq_min: [-200. , -200. , -200. , -200. , -20. , -200. , -200. , -200. , -200. , -20.]
 
 max_temperature: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
+
+walking_start_time: 20
+walking_duration: 20
+walking_distance: 2.5
