--- a/Config/Draco/TEST/WALKING_SIM_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_SIM_TEST.yaml
@@ -48,7 +48,7 @@ control_configuration:
 
     left_body_foot_planning_ctrl:
         planner_name: velocity_reversal_lipm
-        swing_height: 0.15
+        swing_height: 0.17
         push_down_height: 0.0
         default_target_foot_location: [0.0, 0.15, 0.0]
 
@@ -66,7 +66,7 @@ control_configuration:
 
     right_body_foot_planning_ctrl:
         planner_name: velocity_reversal_lipm
-        swing_height: 0.15
+        swing_height: 0.17
         push_down_height: 0.0
         default_target_foot_location: [0.0, -0.15, 0.0]
 
@@ -85,8 +85,13 @@ control_configuration:
 planner_configuration:
 
     velocity_reversal_pln:
-        x_step_length_limit: [-0.4, 0.4]
-        y_step_length_limit: [0.25, 0.65]
+        #x_step_length_limit: [-0.4, 0.4]
+        #y_step_length_limit: [0.25, 0.65]
         com_velocity_limit: [0.0, 1.3]
-        t_prime: [0.21 , 0.20]
-        kappa: [-0.09, -0.13]
+        #t_prime: [0.21 , 0.20]
+        #kappa: [-0.09, -0.13]
+
+        x_step_length_limit: [-0.4, 0.4]
+        y_step_length_limit: [0.20, 0.70]
+        t_prime: [0.20 , 0.22]
+        kappa: [-0.20, -0.20]
