--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 RobotModel/* filter=lfs diff=lfs merge=lfs -text
+ReinforcementLearning/PreCompiledData/* filter=lfs diff=lfs merge=lfs -text
 *.STL filter=lfs diff=lfs merge=lfs -text
 *.stl filter=lfs diff=lfs merge=lfs -text
 *.dae filter=lfs diff=lfs merge=lfs -text
