--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
-RobotModel/* filter=lfs diff=lfs merge=lfs -text
-ReinforcementLearning/PreCompiledData/* filter=lfs diff=lfs merge=lfs -text
 *.STL filter=lfs diff=lfs merge=lfs -text
 *.stl filter=lfs diff=lfs merge=lfs -text
 *.dae filter=lfs diff=lfs merge=lfs -text
@@ -8,3 +6,7 @@ ReinforcementLearning/PreCompiledData/* filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.obj filter=lfs diff=lfs merge=lfs -text
 *.mtl filter=lfs diff=lfs merge=lfs -text
+ReinforcementLearning/PreCompiledData/CartPoleDart filter=lfs diff=lfs merge=lfs -text
+ReinforcementLearning/PreCompiledData/CartPoleBullet filter=lfs diff=lfs merge=lfs -text
+RobotModel/Ground filter=lfs diff=lfs merge=lfs -text
+RobotModel/Robot filter=lfs diff=lfs merge=lfs -text
