--- a/Config/Draco/TEST/RL_WALKING_TEST.yaml
+++ b/Config/Draco/TEST/RL_WALKING_TEST.yaml
@@ -33,10 +33,10 @@ test_configuration:
 
     # ==========================================================================
     # Observation \in R^{4}
-    # [ com_x, com_y, com_vx, com_vy ]
+    # [ com_x, com_y, com_z, com_vx, com_vy ]
     # ==========================================================================
-    obs_lower_bound: []
-    obs_upper_bound: []
+    obs_lower_bound: [-100., -100., -100., -100., -100.]
+    obs_upper_bound: [100., 100., 100., 100., 100.]
 
     # ==========================================================================
     # Action \in R^{2}
@@ -44,14 +44,17 @@ test_configuration:
     # ==========================================================================
     action_lower_bound: [-1, -1]
     action_upper_bound: [1, 1]
-    action_scale: 5
+    action_scale: [0.05, 0.03]
 
     # ======================================================================
     # Terminate condition
     # ======================================================================
-    terminate_obs_lower_bound: [-5 , -0.2 , -10 , -5]
-    terminate_obs_upper_bound: [5  , 0.2  , 10  , 5]
-
+    terminate_obs_lower_bound: [-0.4 , -0.2 , 1.05, -0.5 , -0.5]
+    terminate_obs_upper_bound: [0.4  , 0.2  , 0.85, 0.5  , 0.5]
+    # ======================================================================
+    # Test level reward
+    # ======================================================================
+    keyframe_vel_penalty: [2.0, 2.0]
 
 control_configuration:
 
@@ -77,7 +80,7 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-    left_body_foot_planning_ctrl:
+    left_body_foot_learning_ctrl:
         planner_name: velocity_reversal_lipm
         swing_height: 0.17
         push_down_height: 0.0
@@ -95,7 +98,14 @@ control_configuration:
         fin_foot_z_vel: -0.5
         fin_foot_z_acc: 5.0
 
-    right_body_foot_planning_ctrl:
+        # rl parameters
+        quad_input_penalty: 1.0
+        alive_reward: 5.0
+        deviation_penalty: 1.0
+        reward_scale: 1.0
+
+
+    right_body_foot_learning_ctrl:
         planner_name: velocity_reversal_lipm
         swing_height: 0.17
         push_down_height: 0.0
@@ -113,16 +123,17 @@ control_configuration:
         fin_foot_z_vel: -0.5
         fin_foot_z_acc: 5.0
 
+        # rl parameters
+        quad_input_penalty: 1.0
+        alive_reward: 5.0
+        deviation_penalty: 1.0
+        reward_scale: 1.0
+
 planner_configuration:
 
     velocity_reversal_pln:
-        #x_step_length_limit: [-0.4, 0.4]
-        #y_step_length_limit: [0.25, 0.65]
-        com_velocity_limit: [0.0, 1.3]
-        #t_prime: [0.21 , 0.20]
-        #kappa: [-0.09, -0.13]
-
         x_step_length_limit: [-0.4, 0.4]
         y_step_length_limit: [0.20, 0.70]
+        com_velocity_limit: [0.0, 1.3]
         t_prime: [0.20 , 0.22]
         kappa: [-0.20, -0.20]
