--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -1,19 +1,22 @@
 is_record: false
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
-#show_viewer: false
-show_viewer: true
 num_steps_per_cycle: 30
 hanging_height: 0.83
 display_joint_frame: false
 display_target_frame: true
+joint_limit_enforced: true
 initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
 
 print_computation_time: false
-release_time: 3.95
+release_time: 4.20
+
+### Toggle for RL ###
+show_viewer: true
 check_collision: true
+#show_viewer: false
+#check_collision: false
+
 
 control_configuration:
-  #kp: [100 , 100 , 100 , 100 , 10 , 100 , 100 , 100 , 100 , 10]
-  #kd: [20  , 20  , 20  , 20  , 1  , 20  , 20  , 20  , 20  , 1]
-  kp: [200 , 200 , 200 , 200 , 20 , 200 , 200 , 200 , 200 , 20]
-  kd: [40  , 40  , 40  , 40  , 2  , 40  , 40  , 40  , 40  , 2]
+  kp: [100 , 100 , 100 , 100 , 10 , 100 , 100 , 100 , 100 , 10]
+  kd: [20  , 20  , 20  , 20  , 1  , 20  , 20  , 20  , 20  , 1]
