--- a/Config/Draco/TEST/RL_WALKING_TEST.yaml
+++ b/Config/Draco/TEST/RL_WALKING_TEST.yaml
@@ -19,15 +19,15 @@ test_configuration:
     #replanning: false
     transition_phase_mix_ratio: 0.2
     double_stance_mix_ratio: 0.0
-    #contact_switch_check: true
-    contact_switch_check: false
+    contact_switch_check: true
+    #contact_switch_check: false
 
     protocol:
         ip_control_pc: "localhost"
         ip_sub_pub_prefix: "tcp://127.0.0.1:50"
         ip_req_rep_prefix: "tcp://127.0.0.1:51"
-        #username: 'junhyeokahn'
-        username: 'junhyeok'
+        username: 'junhyeokahn'
+        #username: 'junhyeok'
         execute_cmd: "cd ~/Repository/PnC/build/bin && ./run_draco"
         exit_cmd: "pkill -f 'draco"
 
@@ -49,12 +49,8 @@ test_configuration:
     # ======================================================================
     # Terminate condition
     # ======================================================================
-    terminate_obs_lower_bound: [-0.4 , -0.2 , 1.05, -0.5 , -0.5]
-    terminate_obs_upper_bound: [0.4  , 0.2  , 0.85, 0.5  , 0.5]
-    # ======================================================================
-    # Test level reward
-    # ======================================================================
-    keyframe_vel_penalty: [2.0, 2.0]
+    terminate_obs_lower_bound: [-0.4 , -0.3 , 0.85, -0.5 , -0.5]
+    terminate_obs_upper_bound: [0.4  , 0.3  , 1.05, 0.5  , 0.5]
 
 control_configuration:
 
@@ -89,7 +85,7 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [-0.11, 0.00]
+        body_pt_offset: [0.06, 0.00]
         foot_landing_offset: [0., 0.]
 
         fin_ankle: 1.4
@@ -100,6 +96,7 @@ control_configuration:
 
         # rl parameters
         quad_input_penalty: 1.0
+        keyframe_vel_penalty: [2.0, 2.0]
         alive_reward: 5.0
         deviation_penalty: 1.0
         reward_scale: 1.0
@@ -114,7 +111,7 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [-0.11, 0.0]
+        body_pt_offset: [0.06, 0.0]
         foot_landing_offset: [0., 0.]
 
         fin_ankle: 1.4
@@ -125,6 +122,7 @@ control_configuration:
 
         # rl parameters
         quad_input_penalty: 1.0
+        keyframe_vel_penalty: [2.0, 2.0]
         alive_reward: 5.0
         deviation_penalty: 1.0
         reward_scale: 1.0
@@ -132,7 +130,7 @@ control_configuration:
 planner_configuration:
 
     velocity_reversal_pln:
-        x_step_length_limit: [-0.4, 0.4]
+        x_step_length_limit: [-0.6, 0.6]
         y_step_length_limit: [0.20, 0.70]
         com_velocity_limit: [0.0, 1.3]
         t_prime: [0.20 , 0.22]
