--- a/Config/Draco/TEST/WALKING_SIM_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_SIM_TEST.yaml
@@ -19,8 +19,8 @@ test_configuration:
     #replanning: false
     transition_phase_mix_ratio: 0.2
     double_stance_mix_ratio: 0.0
-    #contact_switch_check: true
-    contact_switch_check: false
+    contact_switch_check: true
+    #contact_switch_check: false
 
 control_configuration:
 
@@ -55,8 +55,8 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [-0.11, 0.00]
-        foot_landing_offset: [0., 0.]
+        body_pt_offset: [0.06, 0.0]
+        foot_landing_offset: [0.0, 0.0]
 
         fin_ankle: 1.4
         switch_vel_threshold: -2.8
@@ -73,7 +73,7 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [-0.11, 0.0]
+        body_pt_offset: [0.06, 0.0]
         foot_landing_offset: [0., 0.]
 
         fin_ankle: 1.4
@@ -85,13 +85,8 @@ control_configuration:
 planner_configuration:
 
     velocity_reversal_pln:
-        #x_step_length_limit: [-0.4, 0.4]
-        #y_step_length_limit: [0.25, 0.65]
-        com_velocity_limit: [0.0, 1.3]
-        #t_prime: [0.21 , 0.20]
-        #kappa: [-0.09, -0.13]
-
-        x_step_length_limit: [-0.4, 0.4]
+        x_step_length_limit: [-0.6, 0.6]
         y_step_length_limit: [0.20, 0.70]
+        com_velocity_limit: [0.0, 1.3]
         t_prime: [0.20 , 0.22]
         kappa: [-0.20, -0.20]
