--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -11,10 +11,10 @@ print_computation_time: false
 release_time: 4.20
 
 ### Toggle for RL ###
-show_viewer: true
-check_collision: true
-#show_viewer: false
-#check_collision: false
+#show_viewer: true
+#check_collision: true
+show_viewer: false
+check_collision: false
 
 
 control_configuration:
