--- a/Config/Draco/TEST/RL_WALKING_TEST.yaml
+++ b/Config/Draco/TEST/RL_WALKING_TEST.yaml
@@ -26,17 +26,17 @@ test_configuration:
         ip_control_pc: "localhost"
         ip_sub_pub_prefix: "tcp://127.0.0.1:50"
         ip_req_rep_prefix: "tcp://127.0.0.1:51"
-        username: 'junhyeokahn'
-        #username: 'junhyeok'
+        #username: 'junhyeokahn'
+        username: 'junhyeok'
         execute_cmd: "cd ~/Repository/PnC/build/bin && ./run_draco"
         exit_cmd: "pkill -f 'draco"
 
     # ==========================================================================
     # Observation \in R^{4}
-    # [ com_x, com_y, com_z, com_vx, com_vy ]
+    # [ com_x, com_y, com_z, com_yaw, com_vx, com_vy ]
     # ==========================================================================
-    obs_lower_bound: [-100., -100., -100., -100., -100.]
-    obs_upper_bound: [100., 100., 100., 100., 100.]
+    obs_lower_bound: [-100., -100., -100., -100., -100., -100.]
+    obs_upper_bound: [100., 100., 100., 100., 100., 100.]
 
     # ==========================================================================
     # Action \in R^{2}
@@ -44,13 +44,13 @@ test_configuration:
     # ==========================================================================
     action_lower_bound: [-1, -1]
     action_upper_bound: [1, 1]
-    action_scale: [0.05, 0.03]
+    action_scale: [0.1, 0.1]
 
     # ======================================================================
     # Terminate condition
     # ======================================================================
-    terminate_obs_lower_bound: [-0.4 , -0.3 , 0.85, -0.5 , -0.5]
-    terminate_obs_upper_bound: [0.4  , 0.3  , 1.05, 0.5  , 0.5]
+    terminate_obs_lower_bound: [-0.4 , -0.3 , 0.85, -0.35, -0.5 , -0.5]
+    terminate_obs_upper_bound: [0.4  , 0.3  , 1.05, 0.35,  0.5  , 0.5]
 
 control_configuration:
 
@@ -85,7 +85,8 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [0.06, 0.00]
+        #body_pt_offset: [0.06, 0.00]
+        body_pt_offset: [0.0, 0.0]
         foot_landing_offset: [0., 0.]
 
         fin_ankle: 1.4
@@ -98,9 +99,8 @@ control_configuration:
         quad_input_penalty: 1.0
         keyframe_vel_penalty: [2.0, 2.0]
         alive_reward: 5.0
-        deviation_penalty: 1.0
+        deviation_penalty: 50.
         reward_scale: 1.0
-
 
     right_body_foot_learning_ctrl:
         planner_name: velocity_reversal_lipm
@@ -111,7 +111,8 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [0.06, 0.0]
+        #body_pt_offset: [0.06, 0.0]
+        body_pt_offset: [0.0, 0.0]
         foot_landing_offset: [0., 0.]
 
         fin_ankle: 1.4
@@ -124,8 +125,54 @@ control_configuration:
         quad_input_penalty: 1.0
         keyframe_vel_penalty: [2.0, 2.0]
         alive_reward: 5.0
-        deviation_penalty: 1.0
+        deviation_penalty: 50.
         reward_scale: 1.0
+
+    right_body_foot_policy_ctrl:
+        planner_name: velocity_reversal_lipm
+        swing_height: 0.17
+        push_down_height: 0.0
+        default_target_foot_location: [0.0, -0.15, 0.0]
+
+        kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
+        kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
+
+        #body_pt_offset: [0.06, 0.0]
+        body_pt_offset: [0.0, 0.0]
+        foot_landing_offset: [0., 0.]
+
+        fin_ankle: 1.4
+        switch_vel_threshold: -2.8
+
+        fin_foot_z_vel: -0.5
+        fin_foot_z_acc: 5.0
+
+        # rl parameters
+        #model_path: "ReinforcementLearning/PreCompiledData/CartPoleDart/ppo_1/checkpoints/01000.yaml"
+        model_path: "RLData/DracoSeperateProcess/ppo_2/checkpoints/00002.yaml"
+
+    left_body_foot_policy_ctrl:
+        planner_name: velocity_reversal_lipm
+        swing_height: 0.17
+        push_down_height: 0.0
+        default_target_foot_location: [0.0, -0.15, 0.0]
+
+        kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
+        kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
+
+        #body_pt_offset: [0.06, 0.0]
+        body_pt_offset: [0.0, 0.0]
+        foot_landing_offset: [0., 0.]
+
+        fin_ankle: 1.4
+        switch_vel_threshold: -2.8
+
+        fin_foot_z_vel: -0.5
+        fin_foot_z_acc: 5.0
+
+        # rl parameters
+        #model_path: "ReinforcementLearning/PreCompiledData/CartPoleDart/ppo_1/checkpoints/01000.yaml"
+        model_path: "RLData/DracoSeperateProcess/ppo_2/checkpoints/00002.yaml"
 
 planner_configuration:
 
