fixed draco added

--- a/PnC/CMakeLists.txt
+++ b/PnC/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(DracoPnC)
+add_subdirectory(FixedDracoPnC)
 add_subdirectory(WBC)
 add_subdirectory(PlannerSet)
 add_subdirectory(CartPolePnC)
