--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -8,14 +8,14 @@ joint_limit_enforced: true
 initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
 
 print_computation_time: false
-#release_time: 4.20
-release_time: 0.5
+release_time: 4.20
+#release_time: 0.5
 
 ### Toggle for RL ###
-#show_viewer: true
-#check_collision: true
-show_viewer: false
-check_collision: false
+show_viewer: true
+check_collision: true
+#show_viewer: false
+#check_collision: false
 
 
 control_configuration:
