just before walking forward with rl

--- a/Config/Draco/TEST/WALKING_SIM_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_SIM_TEST.yaml
@@ -6,8 +6,8 @@ test_configuration:
     body_height: 0.98
     com_height_for_omega: 1.0
 
-    jpos_initialization_time: 2.0
-    com_lifting_time: 2.0
+    jpos_initialization_time: 0.15
+    com_lifting_time: 0.15
 
 
     swing_time: 0.33
@@ -55,7 +55,8 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [0.06, 0.0]
+        #body_pt_offset: [0.06, 0.0]
+        body_pt_offset: [0.0, 0.0]
         foot_landing_offset: [0.0, 0.0]
 
         fin_ankle: 1.4
@@ -73,7 +74,8 @@ control_configuration:
         kp: [100 , 200 , 200 , 200 , 10 , 100 , 200 , 200 , 200 , 10 ]
         kd: [10  , 20  , 20  , 20  , 1  , 10  , 20  , 20  , 20  , 1  ]
 
-        body_pt_offset: [0.06, 0.0]
+        #body_pt_offset: [0.06, 0.0]
+        body_pt_offset: [0.0, 0.0]
         foot_landing_offset: [0., 0.]
 
         fin_ankle: 1.4
