--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,8 +1,8 @@
 #test_name: joint_test
 #test_name: body_test
 #test_name: balancing_test
-#test_name: walking_test
-test_name: rl_walking_test
+test_name: walking_test
+#test_name: rl_walking_test
 
 jpos_min: [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
 jpos_max: [0.6  , 0.4  , 0.5   , 1.9   , 2.33 , 0.6  , 0.4  , 0.5   , 1.9   , 2.33]
@@ -15,6 +15,6 @@ jtrq_min: [-200. , -200. , -200. , -200. , -20. , -200. , -200. , -200. , -200. 
 
 max_temperature: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
 
-walking_start_time: 15
-walking_duration: 10
-walking_distance: 1.0
+walking_start_time: 5
+walking_velocity_lb: [-0.1, -0.1]
+walking_velocity_ub: [0.1, 0.1]
