before rl fwd walking

--- a/Config/Draco/TEST/RL_WALKING_TEST.yaml
+++ b/Config/Draco/TEST/RL_WALKING_TEST.yaml
@@ -26,17 +26,20 @@ test_configuration:
         ip_control_pc: "localhost"
         ip_sub_pub_prefix: "tcp://127.0.0.1:50"
         ip_req_rep_prefix: "tcp://127.0.0.1:51"
-        username: 'junhyeokahn'
-        #username: 'junhyeok'
+        #username: 'junhyeokahn'
+        username: 'junhyeok'
         execute_cmd: "cd ~/Repository/PnC/build/bin && ./run_draco"
         exit_cmd: "pkill -f 'draco"
 
     # ==========================================================================
     # Observation \in R^{9}
-    # [ com_x, com_y, com_z, com_roll, com_pitch, com_yaw, com_vx, com_vy, com_vz ]
+    # [ com_x, com_y, com_z,
+    #   com_roll, com_pitch, com_yaw,
+    #   com_vx, com_vy, com_vz,
+    #   target_x, target_y, target_xdot, target_ydot]
     # ==========================================================================
-    obs_lower_bound: [-100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100.]
-    obs_upper_bound: [100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.]
+    obs_lower_bound: [-100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100. , -100.]
+    obs_upper_bound: [100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.  , 100.]
 
     # ==========================================================================
     # Action \in R^{2}
@@ -49,8 +52,8 @@ test_configuration:
     # ======================================================================
     # Terminate condition
     # ======================================================================
-    terminate_obs_lower_bound: [-0.3 , -0.35 , -0.05 , -0.51 , -0.51 , -0.51 , -0.6 , -0.6 , -0.25]
-    terminate_obs_upper_bound: [0.3  , 0.35  , 0.05  , 0.51  , 0.51  , 0.51  , 0.6  , 0.6  , 0.25]
+    terminate_obs_lower_bound: [-0.3 , -0.35 , -0.05 , -0.51 , -0.51 , -0.51 , -0.6 , -0.6 , -0.25 , -100. , -100. , -100. , -100.]
+    terminate_obs_upper_bound: [0.3  , 0.35  , 0.05  , 0.51  , 0.51  , 0.51  , 0.6  , 0.6  , 0.25  , 100.  , 100.  , 100.  , 100.]
 
 control_configuration:
 
