working on draco turning

--- a/Config/Draco/SIMULATION.yaml
+++ b/Config/Draco/SIMULATION.yaml
@@ -10,7 +10,7 @@ initial_configuration: [0, 0, -0.5, 1.8, 1.03, 0, 0, -0.5, 1.8, 1.03]
 plot_target: true
 plot_adjusted_foot: true
 plot_guided_foot: true
-camera_manipulator: true
+camera_manipulator: false
 print_computation_time: false
 #release_time: 4.20
 release_time: 0.5
@@ -18,8 +18,8 @@ release_time: 0.5
 ### Toggle for RL ###
 show_viewer: true
 #show_viewer: false
-#check_collision: true
-check_collision: false
+check_collision: true
+#check_collision: false
 
 
 control_configuration:
