--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -2,7 +2,8 @@
 #test_name: body_test
 #test_name: balancing_test
 #test_name: walking_test
-test_name: rl_walking_test
+#test_name: rl_walking_test
+test_name: turning_test
 
 jpos_min: [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
 jpos_max: [0.6  , 0.4  , 0.5   , 1.9   , 2.33 , 0.6  , 0.4  , 0.5   , 1.9   , 2.33]
@@ -14,7 +15,3 @@ jtrq_max: [200.  , 200.  , 200.  , 200.  , 20.  , 200.  , 200.  , 200.  , 200.  
 jtrq_min: [-200. , -200. , -200. , -200. , -20. , -200. , -200. , -200. , -200. , -20.]
 
 max_temperature: [100., 100., 100., 100., 100., 100., 100., 100., 100., 100.]
-
-walking_start_time: 5
-walking_velocity_lb: [-0.1, -0.1]
-walking_velocity_ub: [0.1, 0.1]
