--- a/PnC/AtlasPnC/CMakeLists.txt
+++ b/PnC/AtlasPnC/CMakeLists.txt
@@ -4,4 +4,7 @@ file(GLOB_RECURSE headers "*.hpp")
 add_library(AtlasPnC ${sources})
 target_link_libraries(AtlasPnC ${DART_LIBRARIES}
                                 myRobotSystem
-                                myUtils)
+                                myUtils
+                                myFilters
+                                myPlanner
+                                myWBC)
