--- a/PnC/FixedAtlasPnC/CMakeLists.txt
+++ b/PnC/FixedAtlasPnC/CMakeLists.txt
@@ -1,7 +1,7 @@
 file(GLOB_RECURSE sources "*.cpp")
 file(GLOB_RECURSE headers "*.hpp")
 
-add_library(FixedDracoPnC ${sources})
-target_link_libraries(FixedDracoPnC ${DART_LIBRARIES}
+add_library(FixedAtlasPnC ${sources})
+target_link_libraries(FixedAtlasPnC ${DART_LIBRARIES}
                                     myRobotSystem
                                     myUtils)
