--- a/Simulator/Dart/CMakeLists.txt
+++ b/Simulator/Dart/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(Draco)
-add_subdirectory(FixedDraco)
 add_subdirectory(Atlas)
+add_subdirectory(FixedAtlas)
 add_subdirectory(CartPole)
