--- a/Config/Atlas/TEST/WALKING_SIM_TEST.yaml
+++ b/Config/Atlas/TEST/WALKING_SIM_TEST.yaml
@@ -13,6 +13,12 @@ test_configuration:
     double_stance_mix_ratio: 0.0
     contact_switch_check: true
 
+    walking_start_time: 5
+    walking_velocity_lb: [0, 0]
+    walking_velocity_ub: [0, 0]
+    turning_rate_lb: 0.
+    turning_rate_ub: 0.
+
 control_configuration:
     body_ctrl:
 
@@ -69,12 +75,6 @@ control_configuration:
 planner_configuration:
 
     velocity_reversal_pln:
-        #x_step_length_limit: [-0.6, 0.6]
-        #y_step_length_limit: [0.20, 0.70]
-        #com_velocity_limit: [0.0, 1.3]
-        #t_prime: [0.20 , 0.22]
-        #kappa: [-0.20, -0.20]
-
         x_step_length_limit: [-0.32, 0.32]
         y_step_length_limit: [0.15, 0.55]
         com_velocity_limit: [0.0, 1.3]
